# Ignitor

./: Blink.ino  CMakeLists.txt  FYP.DXF  FYP.txt  Ignitor.cpp  Makefile  README.md
Inventor files/: ASI Propane fluid domain.ipt  ASI Propane.idw  ASI Propane.ipt  ASI Propane_support.cfz  Adapter.ipt  Bolt.ipt  Clamp.ipt  Cylinder.ipt  IGNITER.stp  Piping.ipt  Test stand and ignitor.Route01.ipt  Test stand and ignitor.Tube and Pipe Runs.iam  Test stand and ignitor.iam  Test stand and ignitor.idw  Work table.ipt
Inventor files/OldVersions/: ASI Propane.0010.idw  ASI Propane.0018.ipt  Adapter.0001.ipt  Bolt.0001.ipt  Clamp.0002.ipt  Cylinder.0002.ipt  Final Year Project.ipj.bak  Test stand and ignitor.0004.iam  Work table.0002.ipt
Inventor files/Test stand and ignitor/AIP/Tube and Pipe/Run03/: Test stand and ignitor.Route02.ipt  Test stand and ignitor.Run03.iam  pipipe.1693396264119.ipt  pipipe.1693396339722.ipt  pipipe.1693396339812.ipt  pipipe.1693396339907.ipt  pipipe.1693396339996.ipt  pipipe.1693397058914.ipt  pipipe.1693397059017.ipt  pipipe.1693397059126.ipt
src/: ASIsoftware  main.cpp
